--- a/requirements.txt
+++ b/requirements.txt
@@ -1,103 +1,18 @@
-aeidon==1.5
-asn1crypto==0.24.0
-astroid==2.1.0
-backcall==0.1.0
-bleach==2.1.4
-Brlapi==0.6.7
-certifi==2018.8.24
-chardet==3.0.4
-chrome-gnome-shell==0.0.0
-cryptography==2.6.1
-cupshelpers==1.0
-decorator==4.3.0
-defusedxml==0.5.0
-devedeng==4.11.0
-distro==1.3.0
-distro-info==0.21
-entrypoints==0.2.3
-gpg==1.12.0
-html5lib==1.0.1
-httplib2==0.11.3
-idna==2.6
-ipykernel==4.9.0
-ipython==6.5.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
-isort==4.3.4
-jedi==0.12.1
-Jinja2==2.10
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.3
-jupyter-console==5.2.0
-jupyter-core==4.4.0
-kazam==1.4.5
-keyring==17.1.1
-keyrings.alt==3.1.1
-lazy-object-proxy==1.3.1
-logilab-common==1.4.2
-louis==3.8.0
-Mako==1.0.7
-MarkupSafe==1.1.0
+astroid==2.3.3
+cycler==0.10.0
+isort==4.3.21
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
+matplotlib==3.2.0
 mccabe==0.6.1
-mistune==0.8.3
-nbconvert==5.4.0
-nbformat==4.4.0
-notebook==5.7.0
-olefile==0.46
-openshot-qt==2.4.4
-pandocfilters==1.4.2
-parso==0.3.1
-pep8==1.7.1
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==5.4.1
-prometheus-client==0.3.1
-prompt-toolkit==1.0.15
-psutil==5.5.1
-pyasn1==0.4.2
-pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
-pycurl==7.43.0.2
-pyenchant==2.0.0
-Pygments==2.2.0
-PyGObject==3.30.4
-pylint==2.2.2
-PySimpleSOAP==1.16.2
-pysmbc==1.0.15.6
-PySocks==1.6.8
-python-apt==1.8.4.1
-python-dateutil==2.7.3
-python-debian==0.1.35
-python-debianbts==2.8.2
-python-hglib==2.6.1
-python-xapp==1.2.0
-python-xlib==0.23
-pyxattr==0.6.1
-pyxdg==0.25
-pyzmq==17.1.2
-qtconsole==4.4.1
-reportbug===7.5.3-deb10u1
-reportlab==3.5.13
-requests==2.21.0
-scour==0.37
-SecretStorage==2.3.1
-Send2Trash==1.5.0
-setproctitle==1.1.10
-simplegeneric==0.8.1
-six==1.12.0
-terminado==0.8.1
-testpath==0.3.1
-torbrowser-launcher==0.3.2
-tornado==5.1.1
-traitlets==4.3.2
-typed-ast==1.1.1
-unattended-upgrades==0.1
-urllib3==1.24.1
-virtualenv==16.0.0
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.4.2
-wrapt==1.10.11
-youtube-dl==2020.3.8
+numpy==1.18.2
+pandas==1.0.2
+pkg-resources==0.0.0
+pycodestyle==2.5.0
+pylint==2.4.4
+pyparsing==2.4.6
+python-dateutil==2.8.1
+pytz==2019.3
+six==1.14.0
+typed-ast==1.4.1
+wrapt==1.11.2
